--- a/package.json
+++ b/package.json
@@ -20,9 +20,5 @@
   "bugs": {
     "url": "https://github.com/Ubunfu/nCode/issues"
   },
-  "homepage": "https://github.com/Ubunfu/nCode#readme",
-  "devDependencies": {
-    "eslint": "^4.12.1",
-    "eslint-plugin-react": "^7.5.1"
-  }
+  "homepage": "https://github.com/Ubunfu/nCode#readme"
 }
