--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,13 @@
   "version": "0.1",
   "description": "Awesome encoding and decoding tool targeted at developers!",
   "icons": {
-    "19": "img/icon19.png"
+    "16": "img/icon-16.png",
+    "48": "img/icon-48.png",
+    "128": "img/icon-128.png",
+    "256": "img/icon-256.png"
   },
   "browser_action": {
-    "default_icon": "img/icon19.png",
+    "default_icon": "img/icon-48.png",
     "default_popup": "popup.html",
     "default_title": "Let's nCode!"
   },
