--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "nCode",
   "version": "0.2",
-  "description": "Awesome encoding and decoding tool targeted at developers!",
+  "description": "Awesome encoding and decoding tool for developers!",
   "icons": {
     "16": "img/icon-16.png",
     "48": "img/icon-48.png",
