--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "jwt-simple": "^0.5.1",
-    "utf8": "^3.0.0",
-    "x509": "^0.3.3"
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "browserify": "^14.5.0",
-    "eslint": "^4.12.1",
-    "eslint-plugin-react": "^7.5.1",
+    "browserify": "^16.2.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "gulp": "^3.9.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^2.0.0"
   },
   "repository": {
     "type": "git",
