--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "utf8": "^3.0.0"
   },
   "devDependencies": {
+    "ava": "^1.0.0-beta.4",
     "browserify": "^16.2.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "gulp": "^3.9.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "scripts": {
+    "test": "ava"
+  },
+  "ava": {
+    "files": [
+      "test/*.js"
+    ],
+    "sources": [
+      "js/*.js"
+    ]
   },
   "repository": {
     "type": "git",
