--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "Encoding and decoding tool for web developers.",
   "dependencies": {
+    "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "jwt-simple": "^0.5.1",
     "utf8": "^3.0.0"
@@ -11,7 +12,6 @@
     "ava": "^1.0.0-beta.4",
     "browserify": "^16.2.0",
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
     "gulp": "^3.9.1",
     "vinyl-source-stream": "^2.0.0"
   },
