--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "nCode",
   "version": "1.0",
-  "description": "nCode enables easy conversion between string representations:\n *Plaintext\n *Base-64 Encoded\n *JWT \n\nSupport for certificate decoding coming soon!",
+  "description": "nCode enables easy encoding / decoding of the following formats:\n *Base-64 \n *JWT \n\nSupport for PEM-formatted certificate decoding now available!",
   "icons": {
     "16": "img/icon-16.png",
     "48": "img/icon-48.png",
